package com.smartmobility.model;

public enum StatoNoleggio {
    IN_CORSO,
    IN_PAUSA,
    TERMINATO
}
