package com.smartmobility.model;

public enum StatoPrenotazione {
    ATTIVA,
    SCADUTA,
    CONVERTITA
}
