package com.smartmobility.model;

public enum StatoVeicolo {
    DISPONIBILE,
    IN_USO,
    IN_MANUTENZIONE,
    BATTERIA_SCARICA
}
